// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > should render 1`] = `
<div>
  <div
    class="css-1b3vlxq"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a danger color 1`] = `
<div>
  <div
    class="css-5b8mx7"
    color="danger"
  />
</div>
`;

exports[`Spinner > should render a hint color 1`] = `
<div>
  <div
    class="css-1ces6fw"
    color="hint"
  />
</div>
`;

exports[`Spinner > should render a info color 1`] = `
<div>
  <div
    class="css-1b3vlxq"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a large one 1`] = `
<div>
  <div
    class="css-y2inin"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a small one 1`] = `
<div>
  <div
    class="css-1knqax5"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a success color 1`] = `
<div>
  <div
    class="css-k6fzte"
    color="success"
  />
</div>
`;

exports[`Spinner > should render a warning color 1`] = `
<div>
  <div
    class="css-vl3uha"
    color="warning"
  />
</div>
`;
